@@ -1,3 +1,11 @@
+Sun Mar 13 16:07:58 2011  Shota Fukumori  <sorah@tubusu.net>
+
+	* lib/pstore.rb: Fix don't raise "nested transaction" when thread_safe
+	  is true. Patch by Masaki Matsushita (Glass_saga). [ruby-dev:43337]
+
+	* test/test_pstore.rb: Test for above.
+	  Patch by Masaki Matsushita (Glass_saga) [ruby-dev:43337]
+
 Thu Mar 10 21:59:37 2011  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* parse.y (parser_encode_length): add exception as UTF8-MAC for
